RaylibSharp/Raylib.cs


		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void TakeScreenshot(string fileName);                  // Takes a screenshot of current screen (saved a .png)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetRandomValue(int min, int max);                       // Returns a random value between min and max (both included)

		// Files management functions

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool FileExists(string fileName);                      // Check if file exists

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsFileExtension(string fileName, string ext);// Check file extension

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool DirectoryExists(string dirPath);                  // Check if a directory path exists

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern string GetExtension(string fileName);             // Get pointer to extension for a filename string

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern string GetFileName(string filePath);              // Get pointer to filename for a path string

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern string GetFileNameWithoutExt(string filePath);    // Get filename string without extension (memory should be freed)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern string GetDirectoryPath(string fileName);         // Get full path for a given fileName (uses static string)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern string GetPrevDirectoryPath(string path);         // Get previous directory path for a given path (uses static string)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern string GetWorkingDirectory();                      // Get current working directory (uses static string)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern char** GetDirectoryFiles(string dirPath, int* count);  // Get filenames in a directory path (memory should be freed)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ClearDirectoryFiles();                             // Clear directory files paths buffers (free memory)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool ChangeDirectory(string dir);                      // Change working directory, returns true if success

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsFileDropped();                                   // Check if a file has been dropped into window

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern char** GetDroppedFiles(int* count);                         // Get dropped files names (memory should be freed)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void ClearDroppedFiles();                               // Clear dropped files paths buffer (free memory)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern long GetFileModTime(string fileName);                  // Get file modification time (last write time)

		// Persistent storage management

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void StorageSaveValue(int position, int value);             // Save integer value to storage file (to defined position)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int StorageLoadValue(int position);                         // Load integer value from storage file (from defined position)


		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void OpenURL(string url);                              // Open URL with default system browser (if available)

		//------------------------------------------------------------------------------------
		// Input Handling Functions (Module: core)
		//------------------------------------------------------------------------------------

		// Input-related functions: keyboard

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsKeyPressed(KeyboardKey key);                             // Detect if a key has been pressed once

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsKeyDown(KeyboardKey key);                                // Detect if a key is being pressed

		public static bool IsKeyDown(char C) {
			return IsKeyDown((KeyboardKey)C);
		}

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsKeyReleased(KeyboardKey key);                            // Detect if a key has been released once

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsKeyUp(KeyboardKey key);                                  // Detect if a key is NOT being pressed

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetKeyPressed();                                // Get latest key pressed

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetExitKey(int key);                               // Set a custom key to exit program (default is ESC)

		// Input-related functions: gamepads

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsGamepadAvailable(int gamepad);                   // Detect if a gamepad is available

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsGamepadName(int gamepad, string name);      // Check gamepad name (if available)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern string GetGamepadName(int gamepad);                // Return gamepad internal name id

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsGamepadButtonPressed(int gamepad, int button);   // Detect if a gamepad button has been pressed once

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsGamepadButtonDown(int gamepad, int button);      // Detect if a gamepad button is being pressed

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsGamepadButtonReleased(int gamepad, int button);  // Detect if a gamepad button has been released once

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsGamepadButtonUp(int gamepad, int button);        // Detect if a gamepad button is NOT being pressed

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetGamepadButtonPressed();                      // Get the last gamepad button pressed

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetGamepadAxisCount(int gamepad);                   // Return gamepad axis count for a gamepad

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern float GetGamepadAxisMovement(int gamepad, int axis);    // Return axis movement value for a gamepad axis

		// Input-related functions: mouse

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsMouseButtonPressed(MouseButton button);                  // Detect if a mouse button has been pressed once

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsMouseButtonDown(MouseButton button);                     // Detect if a mouse button is being pressed

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsMouseButtonReleased(MouseButton button);                 // Detect if a mouse button has been released once

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsMouseButtonUp(MouseButton button);                       // Detect if a mouse button is NOT being pressed

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetMouseX();                                    // Returns mouse position X

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetMouseY();                                    // Returns mouse position Y

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Vector2 GetMousePosition();                         // Returns mouse position XY

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetMousePosition(int x, int y);                    // Set mouse position XY

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetMouseOffset(int offsetX, int offsetY);          // Set mouse offset

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetMouseScale(float scaleX, float scaleY);         // Set mouse scaling

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetMouseWheelMove();                            // Returns mouse wheel movement Y

		// Input-related functions: touch

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetTouchX();                                    // Returns touch position X for touch point 0 (relative to screen size)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetTouchY();                                    // Returns touch position Y for touch point 0 (relative to screen size)

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Vector2 GetTouchPosition(int index);                    // Returns touch position XY for a touch point index (relative to screen size)

		//------------------------------------------------------------------------------------
		// Gestures and Touch Handling Functions (Module: gestures)
		//------------------------------------------------------------------------------------

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern void SetGesturesEnabled(uint gestureFlags);     // Enable a set of gestures using flags

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern bool IsGestureDetected(int gesture);                    // Check if a gesture have been detected

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetGestureDetected();                           // Get latest detected gesture

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern int GetTouchPointsCount();                          // Get touch points count

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern float GetGestureHoldDuration();                     // Get gesture hold time in milliseconds

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Vector2 GetGestureDragVector();                     // Get gesture drag vector

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern float GetGestureDragAngle();                        // Get gesture drag angle

		[DllImport(LibName, CallingConvention = CConv, CharSet = CSet)]
		public static extern Vector2 GetGesturePinchVector();                    // Get gesture pinch delta
